# neural-network-from-scratch

./: .bandit  .dockerignore  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CICD_ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FUNCTIONAL_COVERAGE_REPORT.md  L15_TRANSFORMATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mathematical_accuracy_results.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_demo.txt  run_demo.sh  setup.cfg  setup.py  test_complete_integration.py  test_integration.py  test_model_zoo.py  test_new_layers.py
.github/: dependabot.yml
.github/workflows/: ci-cd-pipeline.yml  ci-main.yml  ci-main.yml.disabled  ci.yml  docs.yml  monitoring.yml  nightly.yml  performance.yml  performance.yml.disabled  release.yml  release.yml.disabled  security.yml
.obsidian/: workspace.json
benchmarks/: __init__.py  accuracy_validation.py  automated_benchmarking.py  cuda_kernel_benchmark.py  distributed_training_benchmark.py  mathematical_accuracy_benchmark.py  memory_optimization_benchmark.py  memory_profiling.py  mixed_precision_performance_benchmark.py  modern_components_benchmark.py  performance_comparison.py  quick_memory_benchmark.py  speed_benchmarks.py
checkpoints/: README.md
checkpoints/bert/: bert_epoch_1.json  bert_epoch_2.json  bert_epoch_3.json
checkpoints/clip/: clip_epoch_1.json  clip_epoch_2.json  clip_epoch_3.json  clip_epoch_4.json  clip_epoch_5.json  clip_epoch_6.json
checkpoints/gpt2/: gpt2_epoch_1.json  gpt2_epoch_2.json  gpt2_epoch_3.json
checkpoints/modern_transformer/: modern_transformer_epoch_1.json  modern_transformer_epoch_2.json  modern_transformer_epoch_3.json  modern_transformer_epoch_4.json
checkpoints/vit/: vit_epoch_1.json  vit_epoch_2.json  vit_epoch_3.json  vit_epoch_4.json
demo/: streamlit_app.py
deploy/: deploy.sh
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  CUDA_ACCELERATION_GUIDE.md  DEMO_README.md  PERFORMANCE_GUIDE.md  README.md  TESTING.md  TEST_COVERAGE_REPORT.md  TEST_EXECUTION_SUMMARY.md  distributed-training-guide.md
docs/advanced/: README.md  ci-cd-architecture.md  ci-cd-troubleshooting.md  cuda-acceleration.md  distributed-training.md  memory-optimization.md  modern-components.md  performance.md
docs/api/: README.md  reference.md
docs/development/: README.md
docs/reports/: README.md  coverage-update.md  multi-agent-coverage.md  test-coverage-enhancement-report.md
docs/sphinx/: conf.py  index.rst  quickstart.rst  tutorial.rst
docs/user-guide/: README.md  demo.md  testing.md
examples/: README.md  cnn_layers_example.py  comprehensive_streamlit_demo.py  differential_attention_demo.py  distributed_training_example.py  gpu_demo.py  lion_optimizer_example.py  model_zoo_demo.py  mps_performance_benchmark.py  streamlit_demo.py  transformer_variants_showcase.py
examples/applications/: MASSIVE_DATASET_README.md  README_EMAIL_MODEL.md  download_email_dataset.py  download_large_email_dataset.py  email_smart_reply.py  generate_massive_email_dataset.py  reliable_qa_assistant.py  smart_email_streamlit.py  test_loss_reduction.py  train_email_model.py  train_email_model_large.py
examples/showcase/: README.md  bert_inference_demo.py  bert_streamlit_demo.py  (+14 more)
marketing/: BATTLE_TESTED_PLAN.md  COMMUNITY_SEEDING_STRATEGY.md  COORDINATED_LAUNCH_STRATEGY.md  ML_INFLUENCER_DATABASE.md  PERFORMANCE_BENCHMARKS_SHOWCASE.md  PRODUCTION_READINESS_SHOWCASE.md  README.md  TECHNICAL_POWER_SHOWCASE.md  ZERO_TO_VIRAL_EXECUTION.md
scripts/: run_all_benchmarks.py  run_distributed_tests.sh  setup-dev.sh  validate.py  validate_distributed_training.py
tests/: conftest.py  test_activation_comprehensive.py  test_adam_comprehensive.py  test_adam_optimizer.py  test_advanced_loss_functions.py  test_advanced_operations.py  test_advanced_pooling_comprehensive.py  test_arithmetic_comprehensive.py  test_backend_accuracy.py  test_backend_performance.py  test_backend_registration_comprehensive.py  test_backend_utils.py  test_backend_utils_comprehensive.py  test_backend_utils_enhanced.py  test_backends.py  test_backends_init_comprehensive.py  test_backends_utils_final.py  test_cnn_layers_comprehensive.py  test_cnn_rnn_integration_comprehensive.py  test_complete_coverage.py  test_comprehensive_coverage.py  test_config.py  test_config_comprehensive.py  test_config_defaults_comprehensive.py  test_config_device_comprehensive.py  test_core_base_comprehensive.py  test_core_device_coverage_boost.py  test_core_dtype_comprehensive.py  test_core_tensor_coverage_boost.py  test_coverage_boost.py  test_coverage_enhancement.py  test_cuda_backend.py  test_cuda_backend_comprehensive.py  test_cuda_backend_coverage_boost.py  test_deberta_specific.py  test_device_complete.py  test_differential_attention.py  test_distributed_checkpointing.py  test_distributed_communication.py  test_distributed_comprehensive.py  (+102 more)
(+239 files in other folders)
